--- a/DBI.Data.Test/DBI.Data.Test.csproj
+++ b/DBI.Data.Test/DBI.Data.Test.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Antlr3.Runtime">
       <HintPath>..\packages\WebGrease.1.3.0\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
@@ -122,6 +125,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SYS_ORG_PROFILE_OPTIONSTest.cs" />
     <Compile Include="SYS_USER_PROFILE_OPTIONSTest.cs" />
+    <Compile Include="TIMECLOCKTest.cs" />
     <Compile Include="TIME_CLOCKTest.cs" />
     <Compile Include="ServiceUnitDataTest.cs" />
     <Compile Include="UnitTest1.cs" />
