--- a/DBI.Web.EMS/Web.config
+++ b/DBI.Web.EMS/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -10,18 +10,27 @@
     <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
   </configSections>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/Oracle.csdl|res://*/Oracle.ssdl|res://*/Oracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=S0056.dbiservices.com:1530/pcl09;password=qQTVPCGE;persist security info=True;user id=XXEMS&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Oracle.csdl|res://*/Oracle.ssdl|res://*/Oracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=S0056.dbiservices.com:1522/AppDev;password=qQTVPCGE;persist security info=True;user id=XXEMS&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Web.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </buildProviders>
     </compilation>
     <httpRuntime targetFramework="4.5" maxRequestLength="2097152" />
     <httpHandlers>
-      <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler" validate="false" />
+      <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler"
+        validate="false" />
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
+        validate="false" />
     </httpHandlers>
     <httpModules>
       <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
@@ -44,7 +53,7 @@
   </location>
   <system.identityModel.services>
     <federationConfiguration>
-      <cookieHandler requireSsl="false"></cookieHandler>
+      <cookieHandler requireSsl="false" />
     </federationConfiguration>
   </system.identityModel.services>
   <extnet theme="Gray" />
@@ -61,6 +70,7 @@
     </modules>
     <handlers>
       <add name="DirectRequestHandler" verb="*" path="*/ext.axd" preCondition="integratedMode" type="Ext.Net.ResourceHandler" />
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </handlers>
     <httpErrors errorMode="Detailed" />
     <asp scriptErrorSentToBrowser="true" />
