--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -144,6 +144,7 @@
     <Content Include="Resources\Images\wwbnight.png" />
     <Content Include="Resources\Scripts\jquery-2.0.1.js" />
     <Content Include="Resources\Scripts\jquery-2.0.1.min.js" />
+    <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgComm.aspx" />
     <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgLiab.aspx" />
     <Content Include="Views\Modules\BudgetBidding\Reports\umRepOrgSum.aspx" />
     <Content Include="Views\Modules\BudgetBidding\umAdminMain.aspx" />
@@ -309,6 +310,13 @@
     </Compile>
     <Compile Include="Views\Handlers\SystemUsers.ashx.cs">
       <DependentUpon>SystemUsers.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepOrgComm.aspx.cs">
+      <DependentUpon>umRepOrgComm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\BudgetBidding\Reports\umRepOrgComm.aspx.designer.cs">
+      <DependentUpon>umRepOrgComm.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\BudgetBidding\Reports\umRepOrgLiab.aspx.cs">
       <DependentUpon>umRepOrgLiab.aspx</DependentUpon>
@@ -1149,6 +1157,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Views\Modules\BudgetBidding\Reports\umRepOrgComm.rdlc" />
     <EmbeddedResource Include="Views\Modules\BudgetBidding\Reports\umRepOrgLiab.rdlc" />
     <EmbeddedResource Include="Views\Modules\BudgetBidding\Reports\umRepOrgSum.rdlc" />
   </ItemGroup>
