--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -450,6 +450,7 @@
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umCrossingSecurityTab.aspx.cs">
       <DependentUpon>umCrossingSecurityTab.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umCrossingSecurityTab.aspx.designer.cs">
       <DependentUpon>umCrossingSecurityTab.aspx</DependentUpon>
@@ -540,6 +541,7 @@
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umPricing.aspx.cs">
       <DependentUpon>umPricing.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umPricing.aspx.designer.cs">
       <DependentUpon>umPricing.aspx</DependentUpon>
@@ -602,6 +604,7 @@
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umViewCrossings.aspx.cs">
       <DependentUpon>umViewCrossings.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umViewCrossings.aspx.designer.cs">
       <DependentUpon>umViewCrossings.aspx</DependentUpon>
